# rust-realtime-paid-chat

./: Cargo.toml  TODO.md
.github/workflows/: audit-on-push.yml  general.yml
backend/: .env  Cargo.toml
backend/migrations/: 01_create_chat.sql  01_create_user.sql  02_add_amount_to_chat.sql  V02_create_chat.sql
backend/migrations/2023-06-14-071006_create_chat/: down.sql
backend/src/: advisor_list.rs  chat_repository.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs
backend/src/chat/: mod.rs
backend/src/redis_wrapper/: mod.rs
backend/tests/: advisor_list.rs  chat.rs  health_check.rs  spawn_app.rs
src/: main.rs
web/: package-lock.json  package.json  tsconfig.json
web/src/: App.css  App.js  App.test.tsx  App.tsx  Chat.css  Chat.js  Chat.tsx  OpenChat.js  OpenChat.tsx
