[package]
name = "vop_rust"
version = "0.1.0"
authors = ["Flavio Pezzini"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vop_rust"

[dependencies]
axum = { version = "0.6.1", features = ["ws"] }
hyper = {version = "0.14.23"}
futures = "0.3"
tokio = { version = "1.23.1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = "0.11"
