[package]
name = "vop_rust"
version = "0.1.0"
authors = ["Flavio Pezzini"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vop_rust"

[dependencies]
axum = { version = "0.6.1", features = ["ws"] }
hyper = {version = "0.14.23"}
futures = "0.3"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.22.3", features = ["aio", "futures", "tokio", "tokio-comp", "tokio-native-tls", "tokio-native-tls-comp", "serde", "serde_json", "json"] }
rand = "0.8.5"
fmt = "0.1.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
chrono = "0.4.26"

anyhow = "1.0"
sqlx = { version = "0.7.0", features = ["postgres", "runtime-tokio", "chrono", "uuid", "migrate"] }
dotenvy = "0.15.7"

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
reqwest = "0.11"
tokio-tungstenite = "0.17"
testcontainers = "0.14.0"
